syntax = "proto3";

package exocore.appchain.subscriber.v1;

import "exocore/appchain/common/v1/common.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/ExocoreNetwork/exocore/x/appchain/subscriber/types";

// Query defines the gRPC querier service.
service Query {
  // QueryParams returns the appchain subscriber module parameters.
  rpc QueryParams(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http) = {
      get: "/appchain/subscriber/params"
    };
  }
}

// QueryParamsRequest is the request type for the Query.QueryParams RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query.QueryParams RPC method.
message QueryParamsResponse {
  // params is the parameters for the appchain subscriber module.
  exocore.appchain.common.v1.SubscriberParams params = 1 [(gogoproto.nullable) = false];
}